text overflow issue resolved

--- a/src/components/HomeOurValues/Values.css
+++ b/src/components/HomeOurValues/Values.css
@@ -58,6 +58,7 @@
   background:  #fff;
   box-shadow: 0 0.5rem 1.5rem rgba(39, 230, 61, 0.2);
   margin: 0 10px;
+  overflow-y: scroll;
 }
 .collab-section:hover{
   animation:  scaleAnimation 1s ease-in;
@@ -77,6 +78,7 @@
   border-radius: 5px;
   transition-property: width;
   margin: 0 10px;
+  overflow-y: scroll;
 }
 .growth-section:hover{
   animation:  scaleAnimation 1s ease-in;
